--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
